5430 시간초과 해결 후 틀림 - #7
시간초과를 string builder로 해결한 후
33%를 넘어가니까 틀렸다고 채점됨